Fixed text alignment in bodymap button-bar

--- a/public/ng/app/scss/partials/_survey_questions.scss
+++ b/public/ng/app/scss/partials/_survey_questions.scss
@@ -90,7 +90,12 @@ li.item, .item.item-checkbox {
 }
 
 
+
 // BODYMAP
+.button-bar a span {
+  font-size: 18px;
+}
+
 .bodymap {
 
   .item {
